k8s/service.yml
apiVersion: v1
kind: Service

metadata:
  name: hello-service
  namespace: k8s-demo-namespace

spec:
  selector:
    app: hello-app

  ports:
    - port: 80
      targetPort: 3000

  type: ClusterIP
