k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: hello-ingress
  namespace: k8s-demo-namespace

spec:
  ingressClassName: nginx

  rules:
    - host: test-k8s.ashmit.xyz

      http:
        paths:
          - path: /

            pathType: Prefix

            backend:
              service:
                name: hello-service

                port:
                  number: 80
